-- @+leo-ver=4-thin
-- @+node:gcross.20091130053756.1986:@thin VMPS.cabal
-- @@language Haskell
Name:           VMPS
Version:        0.1
Cabal-Version:  >= 1.2
License:        BSD3
License-File:   LICENSE
Author:         Gregory Crosswhite
Copyright:      (c) 2009 Gregory Crosswhite
Maintainer:     gcross@phys.washington.edu
Stability:      experimental
Homepage:       http://github.com/gcross/VMPS
Category:       Physics
Synopsis:       Variational Monte Carlo
Build-Type:     Custom
Build-Depends:  base == 4.1.*,
                array == 0.2.*,
                mtl == 1.1.*,
                Vec == 0.9.*

Library
-- @-node:gcross.20091130053756.1986:@thin VMPS.cabal
-- @-leo
