-- @+leo-ver=4-thin
-- @+node:gcross.20091130053756.1986:@thin VMPS.cabal
-- @@language Haskell
Name:           VMPS
Version:        0.1
Cabal-Version:  >= 1.2
License:        BSD3
License-File:   LICENSE
Author:         Gregory Crosswhite
Copyright:      (c) 2009 Gregory Crosswhite
Maintainer:     gcross@phys.washington.edu
Stability:      experimental
Homepage:       http://github.com/gcross/VMPS
Category:       Physics
Synopsis:       Variational Monte Carlo
Build-Type:     Custom

Library
    Build-Depends:  Blueprint >= 0.2,
                    base >= 4.1 && < 4.3,
                    array >= 0.2 && < 0.4,
                    filepath == 1.*,
                    mtl == 1.1.*,
                    random == 1.*,
                    Vec == 0.9.*,
                    InfixApplicative >= 1.0 && < 1.2,
                    deepseq == 1.1.*,
                    bytestring == 0.9.*,
                    ConfigFile == 1.*,
                    uuid == 1.*,
                    Takusen == 0.8.*,
                    either-unwrap == 1.1.*,
                    monad-loops >= 0.3 && < 0.4

    Extra-Libraries: blas, lapack, arpack, gfortran
-- @-node:gcross.20091130053756.1986:@thin VMPS.cabal
-- @-leo
